adcionando conteudos ao GRID

--- a/index.html
+++ b/index.html
@@ -15,62 +15,69 @@
 </head>
 
 <body>
-  <header class="header">
-    <h1>W.</h1>
-    <ul>
-      <a href="">Home</a>
-      <a href="">New</a>
-      <a href="">Popular</a>
-      <a href="">Trending</a>
-      <a href="">Categories</a>
-    </ul>
-  </header>
-
-  <main>
-    <div class="container">
-      <div class="item-1">1</div>
-      <div class="item-2">2</div>
-      <div class="item-3">3</div>
-      <div class="item-4">4</div>
-      <div class="item-5">5</div>
-      <div class="item-6">6</div>
-      <div class="item-7">7</div>
-    </div>
-  </main>
-
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the
-  people.
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-
-
+  <div class="container-principal">
+    <header class="header">
+      <h1>W.</h1>
+      <ul>
+        <a href="">Home</a>
+        <a href="">New</a>
+        <a href="">Popular</a>
+        <a href="">Trending</a>
+        <a href="">Categories</a>
+      </ul>
+    </header>
+    <main>
+      <div class="container">
+        <div class="item-1">
+          <img src="assets/images/image-web-3-desktop.jpg" alt="">
+        </div>
+        <div class="item-2">
+          <p>
+            New
+            Hydrogen VS Electric Cars
+            Will hydrogen-fueled cars ever catch up to EVs?</p>
+          <hr>
+          <p>
+            The Downsides of AI Artistry
+            What are the possible adverse effects of on-demand AI image generation?</p>
+          <hr>
+          <p>
+            Is VC Funding Drying Up?
+            Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+        </div>
+        <div class="item-3">
+          <strong>The Bright Future of Web 3.0?</strong>
+        </div>
+        <div class="item-4">
+          <p>
+            We dive into the next evolution of the web that claims to put the power of the platforms back into the hands
+            of the
+            people.
+            But is it really fulfilling its promise?
+          </p>
+          <a href="#">Read more</a>
+        </div>
+        <div class="item-5">
+          <img src="assets/images/image-retro-pcs.jpg" alt="">
+          <h1>01</h1>
+          <h2>Reviving Retro PCs</h2>
+          <p>What happens when old PCs are given modern upgrades?</p>
+        </div>
+        <div class="item-6">
+          <img src="assets/images/image-top-laptops.jpg" alt="">
+          <h1>02</h1>
+          <h2>Top 10 Laptops of 2022</h2>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
+        <div class="item-7">
+          <img src="assets/images/image-gaming-growth.jpg" alt="">
+          <h1>03</h1>
+          <h2>The Growth of Gaming</h2>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
+      </div>
+    </main>
+  </div>
 </body>
 
 </html>
