--- a/index.html
+++ b/index.html
@@ -26,56 +26,83 @@
         <a href="">Categories</a>
       </ul>
     </header>
-    <main>
-      <div class="container">
-        <div class="item-1">
-          <img src="assets/images/image-web-3-desktop.jpg" alt="">
-        </div>
-        <div class="item-2">
-          <p>
-            New
-            Hydrogen VS Electric Cars
-            Will hydrogen-fueled cars ever catch up to EVs?</p>
-          <hr>
-          <p>
-            The Downsides of AI Artistry
-            What are the possible adverse effects of on-demand AI image generation?</p>
-          <hr>
-          <p>
-            Is VC Funding Drying Up?
-            Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-        </div>
-        <div class="item-3">
-          <strong>The Bright Future of Web 3.0?</strong>
-        </div>
-        <div class="item-4">
-          <p>
-            We dive into the next evolution of the web that claims to put the power of the platforms back into the hands
-            of the
-            people.
-            But is it really fulfilling its promise?
-          </p>
-          <a href="#">Read more</a>
-        </div>
-        <div class="item-5">
-          <img src="assets/images/image-retro-pcs.jpg" alt="">
+    <main class="container">
+
+      <div class="item-1">
+        <img class="primeira-img" src="assets/images/image-web-3-desktop.jpg" alt="">
+      </div>
+
+      <div class="item-2">
+        <p>
+          New
+          Hydrogen VS Electric Cars
+          Will hydrogen-fueled cars ever catch up to EVs?
+        </p>
+
+        <hr>
+
+        <p>
+          The Downsides of AI Artistry
+          What are the possible adverse effects of on-demand AI image generation?
+        </p>
+
+        <hr>
+
+        <p>
+          Is VC Funding Drying Up?
+          Private funding by VC firms is down 50% YOY. We take a look at what that means.
+        </p>
+      </div>
+
+      <div class="item-3">
+        <strong>The Bright Future of Web 3.0?</strong>
+      </div>
+      <div class="item-4">
+        <p class="p">
+          We dive into the next evolution of the web that claims to put the power of the platforms back into the hands
+          of the
+          people.
+          But is it really fulfilling its promise?
+        </p>
+        <a class="btn" href="#">READ MORE</a>
+      </div>
+
+      <div class="item-5">
+        <img class="pc-antigo" src="assets/images/image-retro-pcs.jpg" alt="ft-computador antigo">
+
+        <div class="pcs">
           <h1>01</h1>
           <h2>Reviving Retro PCs</h2>
           <p>What happens when old PCs are given modern upgrades?</p>
         </div>
-        <div class="item-6">
-          <img src="assets/images/image-top-laptops.jpg" alt="">
-          <h1>02</h1>
-          <h2>Top 10 Laptops of 2022</h2>
-          <p>Our best picks for various needs and budgets.</p>
-        </div>
-        <div class="item-7">
-          <img src="assets/images/image-gaming-growth.jpg" alt="">
-          <h1>03</h1>
-          <h2>The Growth of Gaming</h2>
-          <p>How the pandemic has sparked fresh opportunities.</p>
+
+      </div>
+
+      <div class="item-6">
+        <img class="pc-antigo" src="assets/images/image-top-laptops.jpg" alt="">
+
+        <div class="pcs">
+          <h2>02</h2>
+          <h4>Top 10 Laptops of 2022</h4>
+          <p>
+            Our best picks for various needs and budgets.
+          </p>
         </div>
       </div>
+
+      <div class="item-7">
+        <img class="pc-antigo" src="assets/images/image-gaming-growth.jpg" alt="">
+
+
+        <div class="pcs">
+          <h2>03</h2>
+          <h4>The Growth of Gaming</h4>
+          <p>
+            How the pandemic has sparked fresh opportunities.
+          </p>
+        </div>
+      </div>
+
     </main>
   </div>
 </body>
