--- a/index.html
+++ b/index.html
@@ -33,23 +33,27 @@
       </div>
 
       <div class="item-2">
-        <p>
-          New
-          Hydrogen VS Electric Cars
-          Will hydrogen-fueled cars ever catch up to EVs?
-        </p>
+
+        <h1>New</h1>
+        <h5>Hydrogen VS Electric Cars</h5>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+
 
         <hr>
 
-        <p>
+
+        <h5 style="margin-top: 20px;">
           The Downsides of AI Artistry
+        </h5>
+        <p>
           What are the possible adverse effects of on-demand AI image generation?
         </p>
 
         <hr>
 
+
+        <h5 style="margin-top: 20px;">Is VC Funding Drying Up?</h5>
         <p>
-          Is VC Funding Drying Up?
           Private funding by VC firms is down 50% YOY. We take a look at what that means.
         </p>
       </div>
